--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 *{
     font-family: 'Roboto', cursive;
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
 }
 h1{
     font-size:3em;
@@ -9,5 +12,16 @@ h1{
     flex-direction: column;
     width:100%;
     height:100%;
-    min-width: 600px;
+    min-width: 660px;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
