--- a/src/components/timerContainer/settings/settings.css
+++ b/src/components/timerContainer/settings/settings.css
@@ -3,7 +3,18 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding:0% 2.5% 2.5% 2.5%;
-    width:60%;
+    width:fit-content;
+    padding:2% 0% 2.5% 5%;
     margin-top:4%;
+}
+.outerTimer{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.arrows{
+    display:flex;
+    flex-direction: column;
+    margin-top: 15%;
 }
