added snowball and about section

--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -7,3 +7,9 @@
     justify-content: center;
     align-items: center;
 }
+#aboutSection{
+    margin-top:.8%;
+    width:60%;
+    text-align: center;
+    padding:1%;
+}
