responsiveness, button sizing

--- a/src/components/timerContainer/timerContainer.css
+++ b/src/components/timerContainer/timerContainer.css
@@ -1,6 +1,7 @@
 .TimerContainer{
     display:flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    height:100%;
 }
