--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,9 @@ input[type=number] {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+@media only screen and (max-width: 900px){
+  *{
+    font-size:0.8em;
+  }
+}
