--- a/src/components/timerContainer/runningTimer/runningTimer.css
+++ b/src/components/timerContainer/runningTimer/runningTimer.css
@@ -1,24 +1,10 @@
 .RunningTimer{
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    width:65%;
-    min-width:660px;
+    width:fit-content;
     height:100%;
     margin:2%;
-    padding-top:2%;
-}
-#timers{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    width:100%;
-}
-#checkBoxes{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding:0.5%;
+    padding:1%;
 }
