changed input/output to horizontal at high res

--- a/src/components/timerContainer/startButton/startButton.css
+++ b/src/components/timerContainer/startButton/startButton.css
@@ -11,3 +11,9 @@
 #stopButton{
     margin-left:5%;
 }
+
+@media only screen and (max-width: 900px){
+    .StartButton{
+        margin-bottom:6%;
+    }
+  }
