--- a/src/components/timerContainer/settings/settings.css
+++ b/src/components/timerContainer/settings/settings.css
@@ -4,8 +4,8 @@
     justify-content: space-around;
     align-items: center;
     width:fit-content;
-    padding:2% 1% 2.5% 2%;
-    margin-top:4%;
+    padding:4% 2% 5% 4%;
+    margin-bottom:4%;
 }
 .outerTimer{
     display:flex;
