--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
     margin:0;
     padding:0;
 }
+body { 
+  min-height: 100%;
+}
 h1{
     font-size:3em;
 }
@@ -12,7 +15,7 @@ h1{
     flex-direction: column;
     width:100%;
     height:100%;
-    min-width: 660px;
+    min-width: 760px;
 }
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -45,6 +48,7 @@ input[type=number] {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
 
 @media only screen and (max-width: 900px){
   *{
