--- a/src/components/timerContainer/embedYoutube/embedYoutube.css
+++ b/src/components/timerContainer/embedYoutube/embedYoutube.css
@@ -8,3 +8,13 @@
 #youtubeEmbed{
     padding:3%;
 }
+@media only screen and (max-width: 800px){
+    .embedYoutube{
+        margin: 2%;
+    }
+  }
+@media only screen and (max-width: 1300px) and (min-width:801px){
+.embedYoutube{
+    margin: 2% 0 25% 0;;
+}
+}
