--- a/src/components/timerContainer/runningTimer/runningTimer.css
+++ b/src/components/timerContainer/runningTimer/runningTimer.css
@@ -6,5 +6,10 @@
     width:fit-content;
     height:100%;
     margin-left:2%;
-    padding:1%;
+    padding:1% 5% 1% 5%;
 }
+@media only screen and (max-width: 1300px) and (min-width: 801px){
+    .RunningTimer{
+            padding:1% 2% 1% 2%;
+        }
+    }
